--- a/RK1/index.html
+++ b/RK1/index.html
@@ -11,8 +11,15 @@
 <object type="image/svg+xml" data="img/tyrannosaurus-rex.svg" class="home__logo" width="200" height="200"></object>
 </div>
 <div class="sideitem">
-<div class="item">2</div>
-<div class="item">3</div>
+<div class="item"><p><u>Правила очень простые</u><br> Вы начинаете миленьким динозавриком, и гуляете по лесу<FONT SIZE="+2" COLOR="yellow"> А потом вам в лицо плюют html задание</FONT><br> С этого моменты <strong>вы</strong> всякими способами спасаете динозаврика от ненивисти к миру, а так же не даёте ему совершить суецид от этого <em> веселого "аштиэмэля"</em><FONT SIZE="-10" COLOR="red"> гори он огнём</FONT> </a></p></div>
+<div class="item">
+<table>
+<tr>
+<td><img src="img1.jpg"/></td>
+<td><img src="img2.jpg"/></td>
+<td><img src="img3.jpg"/></td>
+<td><img src="img4.jpg"/></td>
+</tr></table></div>
 </div>
 </div> 
 <form action="">
@@ -30,5 +37,6 @@
 <button class="bttn1">Восстановить пароль</button>
 </div>
 </form>
+<button class="bttn2"><a href="#">Регистрация</a></button>
 </body>
 </html>
