--- a/RK1/index.html
+++ b/RK1/index.html
@@ -11,14 +11,16 @@
 <object type="image/svg+xml" data="img/tyrannosaurus-rex.svg" class="home__logo" width="200" height="200"></object>
 </div>
 <div class="sideitem">
-<div class="item"><p><u>Правила очень простые</u><br> Вы начинаете миленьким динозавриком, и гуляете по лесу<FONT SIZE="+2" COLOR="yellow"> А потом вам в лицо плюют html задание</FONT><br> С этого моменты <strong>вы</strong> всякими способами спасаете динозаврика от ненивисти к миру, а так же не даёте ему совершить суецид от этого <em> веселого "аштиэмэля"</em><FONT SIZE="-10" COLOR="red"> гори он огнём</FONT> </a></p></div>
+<div class="item"><p><u>Правила очень простые</u><br> Вы начинаете миленьким динозавриком, и гуляете по лесу<FONT SIZE="+2" COLOR="yellow"> А потом вам в лицо плюют html задание</FONT><br> С этого моменты <strong>вы</strong> всякими способами спасаете динозаврика от ненависти к миру, а так же не даёте ему совершить суецид от этого <em> веселого "аштиэмэля"</em><FONT SIZE="-10" COLOR="red"> гори он огнём</FONT> </a></p></div>
 <div class="item">
 <table>
 <tr>
-<td><img src="img1.jpg"/></td>
-<td><img src="img2.jpg"/></td>
-<td><img src="img3.jpg"/></td>
-<td><img src="img4.jpg"/></td>
+<td><img src="img/dino-kop.png" class="tablaaa"/></td>
+<td><img src="img/dinosaur_PNG16556.png" class="tablaaa"/></td>
+</tr>
+<tr>
+<td><img src="img/dinosaur_PNG16571.png" class="tablaaa"/></td>
+<td><img src="img/dinosaur_PNG16596.png" class="tablaaa"/></td>
 </tr></table></div>
 </div>
 </div> 
@@ -37,6 +39,6 @@
 <button class="bttn1">Восстановить пароль</button>
 </div>
 </form>
-<button class="bttn2"><a href="#">Регистрация</a></button>
+<button class="bttn2"><a href="reg.html">Регистрация</a></button>
 </body>
 </html>
