--- a/RK1/index.html
+++ b/RK1/index.html
@@ -34,8 +34,8 @@
 <input placeholder="Пароль">
 </div>
 <div>
-<button class="bttn1">Вход</button>
-<button class="bttn1">Старт</button>
+<button class="bttn1"><a href="game.html">Вход</a></button>
+<button class="bttn1"><a href="game.html">Старт</a></button>
 <button class="bttn1">Восстановить пароль</button>
 </div>
 </form>
