--- a/RK1/reg.html
+++ b/RK1/reg.html
@@ -1,7 +1,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <title>Регистрация</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
 </div>
 <div>
 <label>Отчество (необязательно):</label>
-<input placeholder="Фамилия">
+<input placeholder="Отчество">
 </div>
 <div>
 <label>Введите пароль:</label>
@@ -34,8 +34,8 @@
 <input  required type="text"placeholder="E-mail">
 </div>
 <div>
-<label>Номер телефона (необязательно):</label>
-<input placeholder="Номер телефона">
+<label>Любимый динозаврррррррр (необязательно):</label>
+<input placeholder="Любимый динозаврррррррр">
 </div>
 <div>
 <button class="bttn1" value="Отправить">Зарегистрироваться</button>         
